# i4h-asset-catalog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tmp.py
.github/workflows/: helper-unit-tests.yml
docs/: catalog-helper.md  catalog_helper.md  catalog_v0.1.md  catalog_v0.2.0.md  catalog_v0.3.0.md
i4h_asset_catalog/: assets_sha256.json
i4h_asset_catalog/tests/: test_assets.py
i4h_asset_helper/: __init__.py  assets.py  assets_sha256.json  cli.py
i4h_asset_helper/tests/: test_assets.py  test_cli.py
tools/: ensure_license.py  ensure_licenses.py
